--- a/src/p2-homeworks/h1/Message.module.css
+++ b/src/p2-homeworks/h1/Message.module.css
@@ -6,7 +6,7 @@
     min-height: 100px;
     miax-height: 500px;
     border: 1px solid black;
-    background-color: rgb(181, 229, 31);
+    background-color: #06c9fa;
     position: relative;
     padding: 10px 0;
 }
