--- a/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
+++ b/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
@@ -42,5 +42,147 @@
 
 
 .red {
-    background: red;
+    position: relative;
+    width: 160px;
+    height: 50px;
+    line-height: 48px;
+    background: #fa4343;
+    text-transform: uppercase;
+    font-size: 20px;
+    letter-spacing: 4px;
+    text-decoration: none;
+    border: none;
+    cursor: pointer;
+}
+
+.defaultTwo{
+    position: relative;
+    width: 160px;
+    height: 50px;
+    line-height: 48px;
+    background: #000;
+    text-transform: uppercase;
+    font-size: 20px;
+    letter-spacing: 4px;
+    text-decoration: none;
+    /*-webkit-box-reflect: below 1px linear-gradient(transparent, #0004);*/
+    border: none;
+    cursor: pointer;
+}
+.defaultTwo:before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background:linear-gradient(45deg, #fb0094, #00f, #0f0,
+    #ff0, #f00,#fb0094, #00f, #0f0,
+    #ff0, #f00);
+    background-size: 400%;
+    opacity: 0;
+    transition: 0.5s;
+    animation: animate 20s linear infinite;
+}
+.defaultTwo:after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background:linear-gradient(45deg, #fb0094, #00f, #0f0,
+    #ff0, #f00,#fb0094, #00f, #0f0,
+    #ff0, #f00);
+    background-size: 400%;
+    opacity: 0;
+    filter:blur(20px);
+    transition: 0.5s;
+    animation: animate 20s linear infinite;
+}
+.defaultTwo:hover::before,
+.defaultTwo:hover::after{
+    opacity: 1;
+}
+@keyframes animate {
+    0%{
+        background-position: 0 0;
+    }
+    50%{
+        background-position: 300% 0;
+    }
+    100%{
+        background-position: 0 0;
+    }
+}
+.defaultTwo span{
+    position: absolute;
+    display: block;
+    top: 1px;
+    left: 1px;
+    right: 1px;
+    bottom: 1px;
+    text-align: center;
+    background: #0c0c0c;
+    color: rgba(255, 255, 255, 0.9);
+    transition: 0.5s;
+    z-index: 1;
+}
+.defaultTwo:hover span{
+    color: rgba(255, 255, 255, 1);
+}
+.defaultTwo span::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50%;
+    background: rgba(255, 255, 255, 0.1);
+}
+.defaultTwo:disabled{
+    position: relative;
+    width: 160px;
+    height: 50px;
+    line-height: 48px;
+    background:rgba(255, 255, 255, 0.2);
+    text-transform: uppercase;
+    font-size: 20px;
+    letter-spacing: 4px;
+    text-decoration: none;
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+.defaultTwo:disabled::before,
+.defaultTwo:disabled::after {
+    background:rgba(255, 255, 255, 0.2);
+    animation: none;
+
+
+    opacity: 0.5;
+    cursor: not-allowed;
+
+}
+
+.defaultTwo:focus{
+    color: #000000;
+    background: rgba(255, 255, 255, 1);
+}
+.defaultTwo:focus::before,
+.defaultTwo:focus::after
+{
+    filter:blur(30px);
+}
+.defaultTwo:focus span{
+    position: absolute;
+    display: block;
+    top: 5px;
+    left: 0px;
+    right: 0px;
+    bottom: 5px;
+    text-align: center;
+    color: #000000;
+    background: rgba(255, 255, 255, 0.9);
+    transition: 0.5s;
+    z-index: 1;
 }
