--- a/src/p2-homeworks/h1/Message.module.css
+++ b/src/p2-homeworks/h1/Message.module.css
@@ -1,14 +1,16 @@
 
 .wrapper {
+    margin-top: 10px;
     margin-left: 20px;
     display: flex;
     width: 450px;
     min-height: 100px;
-    miax-height: 500px;
+    max-height: 500px;
     border: 1px solid black;
     background-color: #06c9fa;
     position: relative;
     padding: 10px 0;
+
 }
 
 .wrapper img {
@@ -25,7 +27,8 @@
     width: 350px;
     margin-left: 90px;
     border-radius: 25px 25px 25px 0;
-    background-color: black;
+    background-color: #fff;
+
     position: relative;
 }
 
@@ -38,7 +41,7 @@
     height: 20px;
     background-color: transparent;
     border-bottom-right-radius: 35px;
-    box-shadow: 15px 0 0 0 black;
+    box-shadow: 15px 0 0 0 #fff;
 }
 
 .message {
@@ -48,19 +51,19 @@
 }
 
 .message .name {
-    color: rgb(112, 86, 118);
+    color: #282c34;
 
 }
 
 .message .text {
     min-width: 150px;
     max-width: 300px;
-    color: rgb(157, 177, 160);
+    color: rgb(10, 10, 10);
     word-wrap: break-word;
 }
 
 .message .date {
-    color: rgb(49, 74, 45);
+    color: #06c9fa;
     /* position: absolute;*/
     right: 10px;
     bottom: 1px;
