--- a/src/p2-homeworks/h4/HW4.module.css
+++ b/src/p2-homeworks/h4/HW4.module.css
@@ -3,9 +3,10 @@
 }
 
 .column {
+    margin-left: 20px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
 }
 
 .testSpanError {
