--- a/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
+++ b/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
@@ -76,13 +76,18 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background:linear-gradient(45deg, #fb0094, #00f, #0f0,
+    background:linear-gradient(90deg,  #06c9fa,
+    #a9a8a8,  #06c9fa,
+    #a9a8a8,  #06c9fa,
+    #a9a8a8, #06c9fa,
+    #a9a8a8);
+   /* background:linear-gradient(45deg, #fb0094, #00f, #0f0,
     #ff0, #f00,#fb0094, #00f, #0f0,
-    #ff0, #f00);
+    #ff0, #f00);*/
     background-size: 400%;
     opacity: 0;
     transition: 0.5s;
-    animation: animate 20s linear infinite;
+    animation: animate 10s linear infinite;
 }
 .defaultTwo:after{
     content: "";
@@ -91,14 +96,16 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background:linear-gradient(45deg, #fb0094, #00f, #0f0,
-    #ff0, #f00,#fb0094, #00f, #0f0,
-    #ff0, #f00);
+    background:linear-gradient(90deg,  #06c9fa,
+    #a9a8a8,  #06c9fa,
+    #a9a8a8,  #06c9fa,
+    #a9a8a8, #06c9fa,
+    #a9a8a8);
     background-size: 400%;
     opacity: 0;
-    filter:blur(20px);
+    filter:blur(25px);
     transition: 0.5s;
-    animation: animate 20s linear infinite;
+    animation: animate 10s linear infinite;
 }
 .defaultTwo:hover::before,
 .defaultTwo:hover::after{
@@ -167,6 +174,7 @@
 .defaultTwo:focus{
     color: #000000;
     background: rgba(255, 255, 255, 1);
+    border: 1px solid  #000000 ;
 }
 .defaultTwo:focus::before,
 .defaultTwo:focus::after
