--- a/src/p2-homeworks/h3/Greeting.module.css
+++ b/src/p2-homeworks/h3/Greeting.module.css
@@ -6,10 +6,12 @@
     border: 1px solid red;
     color: red;
     width: 200px;
+    background-color: white;
+    font-size: 26px;
 }
 .wrapper{
     display: flex;
-    margin-left: 20px;
+    margin-left: 30px;
 }
 
 .wrapper button {
