--- a/src/p2-homeworks/h2/Affair.module.css
+++ b/src/p2-homeworks/h2/Affair.module.css
@@ -18,8 +18,8 @@
     width: 200px;
     margin-left: 50px;
     opacity: 50%;
-    color: #26310f;
-
+    color: #fff;
+    font-weight: bolder;
 }
 .affairWrap .buttWrapper {
 
