--- a/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
+++ b/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
@@ -165,8 +165,6 @@
 .defaultTwo:disabled::after {
     background:rgba(255, 255, 255, 0.2);
     animation: none;
-
-
     opacity: 0.5;
     cursor: not-allowed;
 
@@ -174,8 +172,9 @@
 
 .defaultTwo:focus{
     color: #000000;
-    background: rgba(255, 255, 255, 1);
+    background: rgb(194, 161, 161);
     border: 1px solid  #000000 ;
+    text-align: center;
 }
 .defaultTwo:focus::before,
 .defaultTwo:focus::after
@@ -190,6 +189,7 @@
     right: 0;
     bottom: 5px;
     text-align: center;
+    font-weight: bolder;
     color: #000000;
     background: rgba(255, 255, 255, 0.9);
     transition: 0.5s;
