--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+:root{
+    --main-color: #06c9fa;
+}
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
