--- a/src/p2-homeworks/h1/Message.module.css
+++ b/src/p2-homeworks/h1/Message.module.css
@@ -10,7 +10,7 @@
     min-height: 100px;
     max-height: 500px;
     border: 1px solid black;
-    background-color: #06c9fa;
+    background-color: var(--main-color);
     position: relative;
     padding: 10px 0;
 
@@ -66,7 +66,7 @@
 }
 
 .message .date {
-    color: #06c9fa;
+    color: var(--main-color);
     font-weight: bolder;
     right: 10px;
     bottom: 1px;
