--- a/src/p2-homeworks/h5/pages/Error404.module.css
+++ b/src/p2-homeworks/h5/pages/Error404.module.css
@@ -1,7 +1,7 @@
 .wrapper{
     min-width: 100vh;
     min-height: 100vh;
-    background-color: #06c9fa;
+    background-color: var(--main-color);
     display: flex;
     font-family: sans-serif;
 }
