hw 11 in progress

--- a/src/p2-homeworks/h9/Clock.module.css
+++ b/src/p2-homeworks/h9/Clock.module.css
@@ -16,7 +16,7 @@
     border: #7e7f80 10px double;
     border-radius: 15px;
     text-align: center;
-    background-color: #0c0c0c;;
+    background-color: #0c0c0c;
     font-size: 20px;
     font-weight: bolder;
     color: var(--main-color);
