--- a/src/p2-homeworks/h11/common/c8-SuperDoubleRange/SuperDoubleRange.module.css
+++ b/src/p2-homeworks/h11/common/c8-SuperDoubleRange/SuperDoubleRange.module.css
@@ -9,7 +9,7 @@
 .container{
     position: relative;
     width: 100%;
-    height: 80px;
+    min-height: 50px;
     margin-top: 30px;
 }
 .inputRange{
