--- a/src/p2-homeworks/h12/HW12.module.css
+++ b/src/p2-homeworks/h12/HW12.module.css
@@ -15,9 +15,16 @@
 }
 
 .some {
-    background: lightgreen;
+    background: var(--main-color);
 }
 
 .some-text {
-    color: darkslateblue;
+    color: white;
+}
+
+.white{
+    background: #e3e2e2;
+}
+.white-text{
+    color: #212121;
 }
